--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,22 +20,32 @@
     <!-- Example for another type of notification -->
     <string name="new_item_found_title">New Item Found!</string>
     <string name="new_item_found_message">A new item was reported: %1$s</string>
+
+    <!-- NEW: Case Statuses for Requests -->
+    <string name="status_in_progress">In Progress</string>
+    <string name="status_found">Found</string>
+    <string name="status_not_found">Not Found</string>
+    <string name="status_rejected">Rejected</string>
+
+    <!-- Spinner Statuses (for AdminEditCaseActivity and filters) -->
     <string-array name="case_statuses">
-        <item>In Progress</item>
-        <item>Case Closed</item>
+        <item>@string/status_in_progress</item>
+        <item>@string/status_found</item>
+        <item>@string/status_not_found</item>
+        <item>@string/status_rejected</item>
     </string-array>
     <string-array name="all_case_statuses_filter">
         <item>All Cases</item>
-        <item>In Progress</item>
-        <item>Case Closed</item>
+        <item>@string/status_in_progress</item>
+        <item>@string/status_found</item>
+        <item>@string/status_not_found</item>
+        <item>@string/status_rejected</item>
     </string-array>
 
+    <!-- NEW: Lost & Found Department Address (for AdminEditCaseActivity) -->
+    <string name="location_address_label">Lost &amp; Found Department Address:</string>
+    <string name="location_address_hint">Enter address for pickup</string>
+
     <!-- <string name="default_channel_name">App Notifications</string> -->
-
-    <!-- <string name="default_channel_description">General notifications for the app</string> -->
-
-
-    <!-- <string name="default_channel_name">App Notifications</string> -->
-
     <!-- <string name="default_channel_description">General notifications for the app</string> -->
 </resources>
